objects/SelectListManage__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>説明</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>無効化</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>非表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>表示名称</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceName__c</fullName>
        <label>選択リスト参照名</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortNo__c</fullName>
        <label>ソート番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>値</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>選択リスト管理</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ReferenceName__c</columns>
        <columns>Label__c</columns>
        <columns>Value__c</columns>
        <columns>SortNo__c</columns>
        <columns>Disabled__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて</label>
    </listViews>
    <listViews>
        <fullName>select_MaintenanceAreaCode</fullName>
        <columns>NAME</columns>
        <columns>ReferenceName__c</columns>
        <columns>Label__c</columns>
        <columns>Value__c</columns>
        <columns>SortNo__c</columns>
        <columns>Hidden__c</columns>
        <columns>Disabled__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReferenceName__c</field>
            <operation>equals</operation>
            <value>MaintenanceAreaCode</value>
        </filters>
        <label>保守地域名称</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>select_QUOZON</fullName>
        <columns>NAME</columns>
        <columns>ReferenceName__c</columns>
        <columns>Label__c</columns>
        <columns>Value__c</columns>
        <columns>SortNo__c</columns>
        <columns>Hidden__c</columns>
        <columns>Disabled__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>見積書地域</value>
        </filters>
        <label>見積書地域</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>select_SVCSALESOLDEL</fullName>
        <columns>NAME</columns>
        <columns>ReferenceName__c</columns>
        <columns>Label__c</columns>
        <columns>Value__c</columns>
        <columns>SortNo__c</columns>
        <columns>Hidden__c</columns>
        <columns>Disabled__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>保守販売OL削除</value>
        </filters>
        <label>保守販売OL削除</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>select_ZON</fullName>
        <columns>NAME</columns>
        <columns>ReferenceName__c</columns>
        <columns>Label__c</columns>
        <columns>Value__c</columns>
        <columns>SortNo__c</columns>
        <columns>Hidden__c</columns>
        <columns>Disabled__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>地域</value>
        </filters>
        <label>地域</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>選択リストグループ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>